--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,18 @@
 body, html {
     width: 100%;
-    background-color: #ddd;
+    background-color: #b1ffb1;
     padding: 0;
     margin: 0;
 }
 
 #head {
-    border-radius: 19px;
     background: url(http://arunas.org/database/images/kanape.jpg);
     width: 100%;
     height: 23vh;
     background-repeat: no-repeat;
     background-size: auto;
-    background-position: bottom;
-    margin: 1vw;
+    background-position: 50% 59%;
+    margin: 0.1vw 1vw 1vw;
 }
 
 label {
